--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.19.0",
+    "@chakra-ui/react": "^3.19.1",
+    "@chakra-ui/theme-tools": "^2.2.6",
+    "@chakra-ui/theme-utils": "^2.0.21",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/open-sans": "^5.2.5",
+    "@fontsource/rubik": "^5.2.5",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.11.3",
-    "framer-motion": "^12.12.1",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
