agrega pagina para publicar productos y tienda. Falta fetch POST de producto

--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.19.1",
+    "@chakra-ui/select": "^2.1.2",
     "@chakra-ui/theme-tools": "^2.2.6",
     "@chakra-ui/theme-utils": "^2.0.21",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "@fontsource/open-sans": "^5.2.5",
     "@fontsource/rubik": "^5.2.5",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^12.15.0",
